--- a/TedWeb.DataAccess/TedWeb.DataAccess.csproj
+++ b/TedWeb.DataAccess/TedWeb.DataAccess.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TedWeb.Model\TedWeb.Model.csproj" />
+    <ProjectReference Include="..\TedWeb.Utility\TedWeb.Utility.csproj" />
   </ItemGroup>
 
 </Project>
